docs: add tags for each declaration kind in the api reference index

--- a/docs/assets/css/base.css
+++ b/docs/assets/css/base.css
@@ -19,7 +19,7 @@ html {
 
 body {
     display: block;
-    font-family: var(--font-sans);
+    font-family: theme("fontFamily.sans");
     font-size: theme("fontSize.base");
     width: 100%;
     margin: 0;
