docs: create initial markup for each declaration kind

--- a/scripts/docs/enum.hbs
+++ b/scripts/docs/enum.hbs
@@ -15,7 +15,7 @@
         {{ this.name }}
     </h1>
 
-    <span class="tag tag-interface">
-        INTERFACE
+    <span class="tag tag-enum">
+        ENUM
     </span>
 </div>
