--- a/scripts/docs/function.hbs
+++ b/scripts/docs/function.hbs
@@ -1,5 +1,3 @@
-{% from "macros/heading.njk" import heading %}
-
 <ul class="flex items-center gap-1 text-xs text-neutral-400">
     <li class="hover:underline">
         <a href="javascript:history.back()">API Reference</a>
@@ -10,7 +8,7 @@
     </li>
 </ul>
 
-<div class="flex items-center justify-start gap-2">
+<div class="flex items-center justify-start gap-2 mb-10">
     <h1 class="heading-2">
         {{ this.name }}
     </h1>
