chore: update vite coverage from c8 to v8

--- a/docs/overview.njk
+++ b/docs/overview.njk
@@ -48,6 +48,10 @@ module: overview
         <li>
             <a href="https://vitepress.vuejs.org/" class="prose" target="_blank">VitePress</a>
         </li>
+
+        <li>
+            <a href="https://modernjs.dev/doc-tools" class="prose" target="_blank">Modern.js Doc</a>
+        </li>
     </ul>
 
     <p class="text-md">
