docs: add source code link and descriptions in the API reference

--- a/docs/assets/css/utilitites.css
+++ b/docs/assets/css/utilitites.css
@@ -41,6 +41,20 @@
 }
 
 /*//////////////////////////////////////////////////////////////////////////////
+/////////// BORDERS
+//////////////////////////////////////////////////////////////////////////////*/
+
+.border {
+    &-t {
+        border-top-color: hsl(var(--color-border));
+    }
+
+    &-b {
+        border-bottom-color: hsl(var(--color-border));
+    }
+}
+
+/*//////////////////////////////////////////////////////////////////////////////
 /////////// POSITIONING
 //////////////////////////////////////////////////////////////////////////////*/
 
