--- a/scripts/docs/class.hbs
+++ b/scripts/docs/class.hbs
@@ -16,4 +16,20 @@
     <span class="tag tag-class">
         CLASS
     </span>
+
+    <a class="mis-auto text material-icons" target="_blank" href="\{{ github }}/{{ this.path }}">
+        code
+    </a>
 </div>
+
+{{#if this.description}}
+<section class="border-t pt-6">
+    <h2 class="heading-3">
+        Description
+    </h2>
+
+    <p class="block text w-full mt-4">
+        {{ this.description }}
+    </p>
+</section>
+{{/if}}
