docs: add under development alert for the api reference pages

--- a/scripts/docs/api-reference-index.hbs
+++ b/scripts/docs/api-reference-index.hbs
@@ -4,6 +4,9 @@ tags: module
 ---
 
 {% from "macros/heading.njk" import heading %}
+{% from "macros/under-development-alert.njk" import underDevelopmentAlert %}
+
+\{{ underDevelopmentAlert() }}
 
 \{{ heading(title) }}
 
