--- a/scripts/docs/function.hbs
+++ b/scripts/docs/function.hbs
@@ -1,3 +1,7 @@
+{% from "macros/under-development-alert.njk" import underDevelopmentAlert %}
+
+\{{ underDevelopmentAlert() }}
+
 <ul class="flex items-center gap-1 text-xs text-neutral-400">
     <li class="hover:underline">
         <a href="javascript:history.back()">API Reference</a>
