--- a/scripts/docs/enum.hbs
+++ b/scripts/docs/enum.hbs
@@ -27,13 +27,13 @@
 </div>
 
 {{#if this.description}}
-    <section class="border-t pt-6">
-        <h2 class="heading-3">
-            Description
-        </h2>
+<section class="border-t pt-6 mb-10">
+    <h2 class="heading-3">
+        Description
+    </h2>
 
-        <p class="block text w-full mt-4">
-            {{ this.description }}
-        </p>
-    </section>
+    <p class="block text w-full mt-4">
+        {{ this.description }}
+    </p>
+</section>
 {{/if}}
