--- a/scripts/docs/interface.hbs
+++ b/scripts/docs/interface.hbs
@@ -21,7 +21,7 @@
         INTERFACE
     </span>
 
-    <a class="mis-auto material-icons" target="_blank" href="\{{ github }}/{{ this.path }}">
+    <a class="mis-auto material-icons" target="_blank" href="\{{ github }}/{{ this.path }}#L{{ this.line }}">
         code
     </a>
 </div>
