docs: add anchor tags to link return types and parameter types in the API reference

--- a/docs/assets/css/utilitites.css
+++ b/docs/assets/css/utilitites.css
@@ -39,6 +39,12 @@
     }
 }
 
+.anchor {
+    &:hover {
+        border-bottom: 1px solid hsl(var(--color-prose));
+    }
+}
+
 .code {
     font-size: theme("fontSize.base");
     font-weight: 400;
