--- a/docs/playground.njk
+++ b/docs/playground.njk
@@ -31,10 +31,15 @@ order: 2
 
     <div id="json-editor" class="hidden json-editor skeleton md:block"></div>
 
+    <div class="fixed bottom-0 alert alert-warning alert-floating mb-6">
+        <span class="mie-4">🚧</span>
+        <span>Still under progress. Soon will be finished.</span>
+    </div>
+
 </section>
 
 <dialog id="dialog" class="dialog">
-    <section class="flex flex-col p-4 md:py-8 md:px-12">
+    <section class="flex flex-col p-4 md:p-12">
         <header class="flex items-center w-full mb-8">
             <h3 class="text font-bold text-3xl">
                 Note
