--- a/docs/getting-started.njk
+++ b/docs/getting-started.njk
@@ -76,6 +76,10 @@ import { parseFromSource } from '@ts-ast-parser/core';
 
 const reflectedModules = parseFromSource('const foo = true;export { foo };');
 {% endhighlight %}
+
+    <p class="text mt-4">
+        See the <a class="prose" href="{{ '/api-reference/' | url }}">API Reference</a> for more information around the parser functions.
+    </p>
 </section>
 
 
