--- a/scripts/docs/type-alias.hbs
+++ b/scripts/docs/type-alias.hbs
@@ -33,7 +33,7 @@
     </h2>
 
     <p class="block text w-full mt-4">
-        {{ this.description }}
+        {{markdownToHTML this.description }}
     </p>
 </section>
 {{/if}}
